--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,7 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
 }
 .bulma-image {
     width: 200px;
